--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -6,7 +6,6 @@
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
@@ -26,7 +25,6 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -35,6 +33,7 @@
     "react": "^16.3.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
+    "react-native": "0.55.3",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -44,10 +43,20 @@
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
+  "devDependencies": {
+    "babel-jest": "22.4.3",
+    "babel-preset-react-native": "4.0.0",
+    "jest": "22.4.3",
+    "react-test-renderer": "16.3.1"
+  },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start:web": "node scripts/start.js",
+    "start:mobile": "node node_modules/react-native/local-cli/cli.js start",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test:mobile": "jest",
+    "test": "node scripts/test.js --env=jsdom",
+    "android": "node node_modules/react-native/local-cli/cli.js run-android",
+    "ios": "node node_modules/react-native/local-cli/cli.js run-ios"
   },
   "jest": {
     "collectCoverageFrom": [
