--- a/packages/platform/.babelrc
+++ b/packages/platform/.babelrc
@@ -1,3 +1,15 @@
 {
-  "presets": ["react-native"]
+  "presets": ["react-native"],
+  "plugins": [
+    "transform-object-rest-spread",
+    [
+      "module-resolver",
+      {
+        "alias": {
+          "react-primitives": "./"
+        },
+        "cwd": "babelrc"
+      }
+    ]
+  ]
 }
