--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-react-native-web": "0.6.1",
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
