--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -11,13 +11,20 @@
   "dependencies": {
     "prop-types": "15.6.1",
     "react": "16.3.2",
-    "react-art": "16.3.2",
-    "react-dom": "16.3.2",
+    "react-test-renderer": "16.3.2",
+    "styled-components": "3.2.6",
     "react-native": "0.55.3",
     "react-native-web": "0.6.1",
     "react-primitives": "0.5.0",
-    "react-sketchapp": "1.1.0",
-    "react-test-renderer": "16.3.2",
-    "styled-components": "3.2.6"
+    "react-art": "16.3.2",
+    "react-sketchapp": "1.1.0"
+  },
+  "peerDependencies": {
+    "react": ">=16.3.2",
+    "react-native": ">=0.55.3",
+    "react-native-web": ">=0.6.1",
+    "react-primitives": ">=0.5.0",
+    "react-art": "16.3.2",
+    "react-sketchapp": ">=1.1.0"
   }
 }
