--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
+    "babel-plugin-idx": "^2.2.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-react-native-web": "0.6.1",
     "babel-plugin-transform-async-to-generator": "6.24.1",
@@ -57,18 +58,20 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react-native": "4.0.0",
     "babel-runtime": "6.26.0",
+    "haul": "^1.0.0-rc.0",
     "jest": "22.4.3",
     "react-test-renderer": "16.3.1"
   },
   "scripts": {
     "start:web": "node scripts/start.js",
-    "start:mobile": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
     "build": "node scripts/build.js",
     "test:mobile": "jest",
     "test": "node scripts/test.js --env=jsdom",
     "android": "node node_modules/react-native/local-cli/cli.js run-android",
     "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
-    "native:link": "node node_modules/react-native/local-cli/cli.js link"
+    "native:link": "node node_modules/react-native/local-cli/cli.js link",
+    "haul": "haul"
   },
   "jest": {
     "preset": "react-native",
