--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react",
     "react-components"
   ],
-  "author":
-    "Santhosh Beerelli <san2beerelli@gmail.com> (http://san2beerelli.com/)",
+  "author": "Santhosh Beerelli <san2beerelli@gmail.com> (http://san2beerelli.com/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/san2beerelli/uni-react/issues"
@@ -29,5 +28,8 @@
   "homepage": "https://github.com/san2beerelli/uni-react#readme",
   "devDependencies": {
     "lerna": "2.11.0"
+  },
+  "dependencies": {
+    "recyclerlistview": "1.3.4"
   }
 }
